--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # SITE CONFIGURATION
 baseurl:
-url: "https://sylhare.github.io"
-title: Type on Strap # site's title
+url: "https://brad903.github.io"
+title: Brad's Development Diary # site's title
 description: "A website with blog posts and pages" # used by search engines
 
 
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
   # Meta
-  title: Type on Strap # blog's title
+  title: Brad's Development Diary # blog's title
   avatar: assets/img/triangle.svg
   favicon: assets/favicon.ico
   gravatar: # Email MD5 hash
@@ -29,7 +29,7 @@ theme_settings:
   facebook:
   flickr:
   gitlab:
-  github: "sylhare"
+  github: "brad903"
   google_plus:
   instagram:
   keybase:
