--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ theme_settings:
     email: true
 
   # Scripts / Features 
-  google_analytics: # Tracking ID, e.g. "UA-000000-01"
+  google_analytics: "UA-126061784-1" # Tracking ID, e.g. "UA-000000-01"
   disqus_shortname: "https-brad903-github-io"
   katex: true # Enable if using math markup
   
