--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,7 @@ theme_settings:
 
   # Header and footer text
   header_text: > #two or three lines to describe your site
-     <p>Change header text in <code>_config.yml</code> <br> to update this feature.</p>
-  header_text_feature_image: assets/img/pexels/triangular.jpeg
+  header_text_feature_image: assets/img/pexels/programmar-mac.jpg
   footer_text: >
       2018 Brad Lee </a> Powered by <a href="https://jekyllrb.com/">Jekyll</a>
 
